[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/healingConsoleActivate.png" type="Texture" id=1]
[ext_resource path="res://assets/healingConsoleIdle.png" type="Texture" id=2]
[ext_resource path="res://scripts/HealingConsole.gd" type="Script" id=3]
[ext_resource path="res://resources/Fkey.tres" type="SpriteFrames" id=4]
[ext_resource path="res://assets/background/LightSprite.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/keys/dpad_up.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/PublicPixel-z84yD.ttf" type="DynamicFontData" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=25]
resource_name = "Glow"

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 22.5, 13 )

[sub_resource type="DynamicFont" id=23]
size = 8
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=24]
size = 8
font_data = ExtResource( 7 )

[node name="HealingConsole" type="Node2D"]
script = ExtResource( 3 )

[node name="Idle" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )

[node name="Active" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 20 )

[node name="Light2D" type="Light2D" parent="Active"]
modulate = Color( 0.317647, 1, 0.219608, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
color = Color( 0.278431, 0.870588, 0.172549, 1 )
energy = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Active"]
anims/Glow = SubResource( 25 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 3 )
shape = SubResource( 21 )

[node name="Label" type="Label" parent="."]
margin_left = -60.0
margin_top = -30.0
margin_right = 84.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 23 )
text = "Press   to Heal"

[node name="AnimatedSprite" type="AnimatedSprite" parent="Label"]
visible = false
position = Vector2( 52, 7 )
frames = ExtResource( 4 )
playing = true

[node name="Key" type="Sprite" parent="Label"]
position = Vector2( 53, 5 )
texture = ExtResource( 6 )

[node name="Cost" type="Label" parent="."]
margin_left = -40.0
margin_top = -43.0
margin_right = 41.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 24 )
text = "Scrap: 500"

[connection signal="animation_finished" from="Active" to="." method="_on_Active_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
